Correction du problème d'alignement du header(mobile)

--- a/style.css
+++ b/style.css
@@ -953,7 +953,7 @@ footer {
 
   #menu-toggle {
     display: block;
-    z-index: 1001; 
+    z-index: 1001; /* Assurez-vous que le bouton reste au-dessus du menu */
   }
 
   #main-nav {
@@ -961,22 +961,17 @@ footer {
     display: none;
     position: absolute;
     top: 100%; /* Positionne le menu juste en dessous du header */
-    top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
     padding: 1rem 0;
     box-shadow: 0 5px 10px rgba(0,0,0,0.2);
     background-color: rgba(10, 10, 10, 0.95); /* Fond semi-transparent */
         backdrop-filter: blur(5px); /* Effet de flou */
         -webkit-backdrop-filter: blur(5px); /* Utilisez la couleur de fond de votre header */
-    z-index: 1000;
   }
 
   #main-nav.show {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+      display: block;
   }
 
   nav ul {
@@ -986,36 +981,26 @@ footer {
     margin: 0;
   }
 
-  nav ul li {
-    margin: 15px 0;
+nav ul li {
+    margin: 10px 0;
     width: 100%;
     text-align: center;
   }
 
-  nav ul li a {
+nav ul li a {
     display: block;
     padding: 10px 0;
     width: 100%;
   }
 
 /* Style pour le bouton de déconnexion dans le menu mobile */
-  nav ul li a, .logout-btn {
-    display: block;
-    padding: 10px 0;
-    width: 100%;
-    color: var(--white);
-    font-size: 1.2rem;
-    transition: color 0.3s ease;
-  }
-
-  nav ul li a:hover, .logout-btn:hover {
-    color: var(--gold);
-  }
-
-  .logout-btn {
+.logout-btn {
     background: none;
     border: none;
+    color: var(--gold);
+    font-size: 1rem;
     cursor: pointer;
-    font-family: 'Montserrat', sans-serif;
+    padding: 10px 0;
+    width: 100%;
   }
 }
